# kuryr-rancher

./: .coveragerc  .gitignore  .testr.conf  Makefile  cni.spec  cni_builder  cni_builder.Dockerfile  cni_main.patch  controller.Dockerfile  k8s_client.patch  kuryr-rancher-controller.sh  requirements.txt  setup.cfg  test-requirements.txt  tox.ini
contrib/vagrant/: README.md
devstack/: plugin.sh
doc/source/: usage.rst
doc/source/devref/: index.rst
doc/source/specs/pike/: contrail_support.rst
etc/oslo-config-generator/: kuryr.conf
hooks/: hook-kuryr_kubernetes.cni.binding.py
kuryr_rancher/: clients.py  config.py  k8s_client.py  opts.py  os_vif_plug_noop.py  os_vif_util.py  version.py  watcher.py
kuryr_rancher/cmd/: __init__.py  cni.py
kuryr_rancher/cmd/eventlet/: controller.py
kuryr_rancher/cni/: api.py  handlers.py  main.py
kuryr_rancher/cni/binding/: base.py  bridge.py  nested.py
kuryr_rancher/controller/: service.py
kuryr_rancher/controller/drivers/: base.py  default_project.py  default_security_groups.py  default_subnet.py  lb_public_ip.py  lbaasv2.py  nested_macvlan_vif.py  nested_vif.py  nested_vlan_vif.py  neutron_vif.py  public_ip.py  vif_pool.py
kuryr_rancher/controller/handlers/: lbaas.py  pipeline.py  vif.py
kuryr_rancher/handlers/: asynchronous.py  dispatch.py  k8s_base.py  logging.py  retry.py
kuryr_rancher/objects/: __init__.py  base.py  lbaas.py
kuryr_rancher/tests/: base.py
kuryr_rancher/tests/unit/: kuryr_fixtures.py  test_clients.py  test_k8s_client.py  test_linux_net_utils.py  test_os_vif_plug_noop.py  test_os_vif_util.py  test_watcher.py
kuryr_rancher/tests/unit/cmd/eventlet/: test_controller.py
kuryr_rancher/tests/unit/controller/: test_service.py
kuryr_rancher/tests/unit/controller/drivers/: test_base.py  test_default_project.py  test_default_security_groups.py  test_default_subnet.py  test_lb_public_ip.py  test_lbaasv2.py  test_nested_macvlan_vif.py  test_nested_vif.py  test_nested_vlan_vif.py  test_neutron_vif.py  test_public_ip.py  test_vif_pool.py
kuryr_rancher/tests/unit/controller/handlers/: test_lbaas.py  test_pipeline.py  test_vif.py
kuryr_rancher/tests/unit/handlers/: test_asynchronous.py  test_dispatch.py  test_k8s_base.py  test_logging.py  test_retry.py
scripts/: run_server.py
tools/: generate_config_file_samples.sh  generate_k8s_resource_definitions.sh
