[metadata]
name = kuryr-kubernetes
summary = Kubernetes integration with OpenStack networking
description-file =
    README.rst
author = OpenStack
author-email = openstack-dev@lists.openstack.org
home-page = https://docs.openstack.org/kuryr-kubernetes/latest
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5

[entry_points]
oslo.config.opts =
    kuryr_rancher = kuryr_rancher.opts:list_kuryr_opts
    kuryr_lib = kuryr.lib.opts:list_kuryr_opts

os_vif =
    noop = kuryr_rancher.os_vif_plug_noop:NoOpPlugin

console_scripts =
    kuryr-k8s-controller = kuryr_rancher.cmd.eventlet.controller:start
    kuryr-cni = kuryr_rancher.cmd.cni:run

kuryr_rancher.vif_translators =
    ovs = kuryr_rancher.os_vif_util:neutron_to_osvif_vif_ovs

kuryr_rancher.cni.binding =
    VIFBridge = kuryr_rancher.cni.binding.bridge:BridgeDriver
    VIFOpenVSwitch = kuryr_rancher.cni.binding.bridge:VIFOpenVSwitchDriver
    VIFVlanNested = kuryr_rancher.cni.binding.nested:VlanDriver
    VIFMacvlanNested = kuryr_rancher.cni.binding.nested:MacvlanDriver

kuryr_rancher.controller.drivers.pod_project =
    default = kuryr_rancher.controller.drivers.default_project:DefaultPodProjectDriver

kuryr_rancher.controller.drivers.service_project =
    default = kuryr_rancher.controller.drivers.default_project:DefaultServiceProjectDriver

kuryr_rancher.controller.drivers.pod_subnets =
    default = kuryr_rancher.controller.drivers.default_subnet:DefaultPodSubnetDriver

kuryr_rancher.controller.drivers.service_subnets =
    default = kuryr_rancher.controller.drivers.default_subnet:DefaultServiceSubnetDriver

kuryr_rancher.controller.drivers.pod_security_groups =
    default = kuryr_rancher.controller.drivers.default_security_groups:DefaultPodSecurityGroupsDriver

kuryr_rancher.controller.drivers.service_security_groups =
    default = kuryr_rancher.controller.drivers.default_security_groups:DefaultServiceSecurityGroupsDriver

kuryr_rancher.controller.drivers.pod_vif =
    neutron-vif = kuryr_rancher.controller.drivers.neutron_vif:NeutronPodVIFDriver
    nested-vlan = kuryr_rancher.controller.drivers.nested_vlan_vif:NestedVlanPodVIFDriver
    nested-macvlan = kuryr_rancher.controller.drivers.nested_macvlan_vif:NestedMacvlanPodVIFDriver

kuryr_rancher.controller.drivers.endpoints_lbaas =
    lbaasv2 = kuryr_rancher.controller.drivers.lbaasv2:LBaaSv2Driver

kuryr_rancher.controller.drivers.service_public_ip =
    neutron_floating_ip = kuryr_rancher.controller.drivers.lb_public_ip:FloatingIpServicePubIPDriver

kuryr_rancher.controller.drivers.vif_pool =
    noop = kuryr_rancher.controller.drivers.vif_pool:NoopVIFPool
    neutron = kuryr_rancher.controller.drivers.vif_pool:NeutronVIFPool
    nested = kuryr_rancher.controller.drivers.vif_pool:NestedVIFPool

[files]
packages =
    kuryr_rancher

[build_sphinx]
source-dir = doc/source
build-dir = doc/build
all_files = 1
warning-is-error = 1

[upload_sphinx]
upload-dir = doc/build/html

[compile_catalog]
directory = kuryr-kubernetes/locale
domain = kuryr-kubernetes

[update_catalog]
domain = kuryr-kubernetes
output_dir = kuryr-kubernetes/locale
input_file = kuryr-kubernetes/locale/kuryr-kubernetes.pot

[extract_messages]
keywords = _ gettext ngettext l_ lazy_gettext
mapping_file = babel.cfg
output_file = kuryr-kubernetes/locale/kuryr-kubernetes.pot
